--- a/ex10.html
+++ b/ex10.html
@@ -1,120 +1,90 @@
 <!DOCTYPE html>
 <html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-
-        form {
-            display: grid;
-            grid-template-columns: auto 1fr;
-            gap: 10px;
-            width: 600px;
-        }
-
-        label {
-            text-align: left;
-            font-weight: bold;
-        }
-
-        input, select, textarea {
-            width: 100%;
-            padding: 6px;
-            border: 1px solid black;
-            border-radius: 3px;
-            font-size: 14px;
-        }
-
-        input[type="radio"], input[type="checkbox"] {
-            width: auto;
-            margin-right: 5px;
-        }
-
-        textarea {
-            height: 60px;
-            resize: none;
-        }
-
-        .radio-group, .checkbox-group {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        button {
-            grid-column: span 2;
-            padding: 5px 10px;
-            background: #f5f5f5;
-            border: 1px solid black;
-            cursor: pointer;
-            font-size: 14px;
-        }
-    </style>
-</head>
-<body>
-
-    <form>
-        <label>Họ và tên:</label>
-        <input type="text" name="fullname">
-
-        <label>Ngày sinh:</label>
-        <input type="date" name="dob">
-
-        <label>Giới tính:</label>
-        <div class="radio-group">
-            <input type="radio" name="gender" value="Nam"> Nam
-            <input type="radio" name="gender" value="Nữ"> Nữ
-        </div>
-
-        <label>Số điện thoại:</label>
-        <input type="text" name="phone">
-
-        <label>Email:</label>
-        <input type="email" name="email">
-
-        <label>Tên công ty:</label>
-        <input type="text" name="company_name">
-
-        <label>Vai trò trong công ty:</label>
-        <select name="role">
-            <option>Giám đốc điều hành (CEO)</option>
-        </select>
-
-        <label>Quy mô công ty:</label>
-        <select name="company_size">
-            <option>Doanh nghiệp nhỏ</option>
-        </select>
-
-        <label>Ngành nghề công ty:</label>
-        <input type="text" name="industry">
-
-        <label>Lý do tham gia câu lạc bộ:</label>
-        <textarea name="reason"></textarea>
-
-        <label>Kinh nghiệm lãnh đạo:</label>
-        <textarea name="experience"></textarea>
-
-        <label>Mục tiêu khi tham gia câu lạc bộ:</label>
-        <textarea name="goals"></textarea>
-
-        <label>Chương trình sự kiện mong muốn tham gia:</label>
-        <div class="checkbox-group">
-            <input type="checkbox" name="event" value="Networking"> Networking
-            <input type="checkbox" name="event" value="Workshops"> Workshops
-            <input type="checkbox" name="event" value="Hội thảo"> Hội thảo
-        </div>
-
-        <label>Đăng ký nhận bản tin:</label>
-        <div class="checkbox-group">
-            <input type="checkbox" name="newsletter" value="yes"> Có
-        </div>
-
-        <button type="submit">Đăng ký hội viên</button>
-    </form>
-
-</body>
+  </head>
+  <body>
+    <table>
+      <form>
+        <tr>
+          <td><label>Họ và tên:</label></td>
+          <td><input type="text" name="fullname" /></td>
+        </tr>
+        <tr>
+          <td><label>Ngày sinh:</label></td>
+          <td><input type="date" name="dob" /></td>
+        </tr>
+        <tr>
+          <td><label>Giới tính:</label></td>
+          <td>
+            <input type="radio" name="gender" value="Nam" /> Nam
+            <input type="radio" name="gender" value="Nữ" /> Nữ
+          </td>
+        </tr>
+        <tr>
+          <td><label>Số điện thoại:</label></td>
+          <td><input type="text" name="phone" /></td>
+        </tr>
+        <tr>
+          <td><label>Email:</label></td>
+          <td><input type="email" name="email" /></td>
+        </tr>
+        <tr>
+          <td><label>Tên công ty:</label></td>
+          <td><input type="text" name="company_name" /></td>
+        </tr>
+        <tr>
+          <td><label>Vai trò trong công ty:</label></td>
+          <td>
+            <select name="role">
+              <option>Giám đốc điều hành (CEO)</option>
+            </select>
+          </td>
+        </tr>
+        <tr>
+          <td><label>Quy mô công ty:</label></td>
+          <td>
+            <select name="company_size">
+              <option>Doanh nghiệp nhỏ</option>
+            </select>
+          </td>
+        </tr>
+        <tr>
+          <td><label>Ngành nghề công ty:</label></td>
+          <td><input type="text" name="industry" /></td>
+        </tr>
+        <tr>
+          <td><label>Lý do tham gia câu lạc bộ:</label></td>
+          <td><textarea name="reason"></textarea></td>
+        </tr>
+        <tr>
+          <td><label>Kinh nghiệm lãnh đạo:</label></td>
+          <td><textarea name="experience"></textarea></td>
+        </tr>
+        <tr>
+          <td><label>Mục tiêu khi tham gia câu lạc bộ:</label></td>
+          <td><textarea name="goals"></textarea></td>
+        </tr>
+        <tr>
+          <td><label>Chương trình sự kiện mong muốn tham gia:</label></td>
+          <td>
+            <input type="checkbox" name="event" value="Networking" /> Networking
+            <input type="checkbox" name="event" value="Workshops" /> Workshops
+            <input type="checkbox" name="event" value="Hội thảo" /> Hội thảo
+          </td>
+        </tr>
+        <tr>
+          <td><label>Đăng ký nhận bản tin:</label></td>
+          <td><input type="checkbox" name="newsletter" value="yes" /> Có</td>
+        </tr>
+        <tr>
+          <td colspan="2" style="text-align: center;">
+            <button type="submit">Đăng ký hội viên</button>
+          </td>
+        </tr>
+      </form>
+    </table>
+  </body>
 </html>
